# S4WM-extract-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs  vite.rs
