[package]
name = "S4WM-extract"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.8"  # Specify a particular compatible version
regex = "1.5"  # Specify a particular compatible version
serde = { version = "1.0", features = ["derive"] } 
reqwest = "0.12.3"  # Specify a particular compatible version
serde_json = "1.0"  # Specify a particular compatible version
env_logger = "0.11"  # If you're using env_logger for logging
log = "0.4"  # If you're using the log crate for logging
pdf-extract = "0.7.5"
lazy_static = "1.4.0"
cargo-upgrades = "2.0.1"
